--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Search Page</title>
-   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="content">
         <h1 class="title">Search</h1>
         <div class="search-form">
             <form action="/scrapp" method="POST">
-                <input type="text" name="content" id="content" class="search-input" placeholder="Enter your search query">
+                <div class="form-group">
+                    <label for="content">Search Query:</label>
+                    <input type="text" name="content" id="content" class="search-input">
+                </div>
+                <div class="form-group">
+                    <label for="num_images">Number of Images to Scrape:</label>
+                    <input type="number" name="num_images" id="num_images" min="1" max="100" class="search-input">
+                </div>
                 <button type="submit" class="search-button">Search</button>
             </form>
         </div>
